--- a/Project_Manager/templates/includes/sidebar.html
+++ b/Project_Manager/templates/includes/sidebar.html
@@ -69,8 +69,14 @@
     </div>
 
     <div class="">
-      <a href="{% url 'teams:projects:my_projects' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
+      <a href="{% url 'my_projects' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
         Проекты
+      </a>
+    </div>
+
+    <div class="">
+      <a href="{% url 'my_tasks' %}" class="block px-4 py-2 rounded hover:bg-gray-200 text-gray-800">
+        Задачи
       </a>
     </div>
 
