--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -55,7 +55,7 @@
 			<div class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
 				<div class="flex items-center justify-between">
 					<a href="#" class="-m-1.5 p-1.5">
-						<span class="sr-only">Your Company</span>
+						<span class="sr-only">Your</span>
 						<img class="h-8 w-auto" src="" alt="">
 					</a>
 					<button type="button" id="menu-close" class="-m-2.5 rounded-md p-2.5 text-gray-700">
@@ -68,13 +68,18 @@
 				<div class="mt-6 flow-root">
 					<div class="-my-6 divide-y divide-gray-500/10">
 						<div class="space-y-2 py-6">
-							<a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Начать</a>
+							<a href="{% url 'home' %}" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">На главную</a>
 							<a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">О возможностях</a>
 							<a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Обратная связь</a>
 						</div>
 						<div class="py-6">
-							<a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Войти</a>
-							<a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Зарегистрироваться</a>
+							{% if user.is_authenticated %}
+							<a href="{% url 'users:profile' user.pk %}" class="btn btn-primary text-xl font-semibold text-white mr-6">Профиль</a>
+							<a href="{% url 'users:logout' %}" class="btn btn-primary text-xl font-semibold text-white">Выйти</a>
+						{% else %}
+							<a href="{% url 'users:login' %}" class="btn btn-primary text-xl font-semibold text-white mr-6">Войти</a>
+							<a href="{% url 'users:register' %}" class="btn btn-primary text-xl font-semibold text-white">Зарегистрироваться</a>
+						{% endif %}
 						</div>
 					</div>
 				</div>
