--- a/Project_Manager/templates/projects/includes/add-members-modal.html
+++ b/Project_Manager/templates/projects/includes/add-members-modal.html
@@ -13,10 +13,13 @@
             <div class="space-y-3 max-h-60 overflow-y-auto pr-2">
                 {% for member in team_members %}
                     <label class="flex items-center gap-3 p-3 bg-white border border-gray-300 rounded-md shadow-sm cursor-pointer hover:bg-gray-50">
+                        <div title="{{member.username}}" class="w-12 rounded-full border border-black border-[2px] ring ring-primary ring-2 overflow-hidden">
+                            <img src="{{member.profile.get_profile_picture_url}}" alt="">
+                        </div>
                         <input type="checkbox" name="member" value="{{ member.id }}"
                             {% if member.id in project_member_ids %}checked{% endif %}
                             class="checkbox checkbox-info">
-                        <span class="text-gray-800 font-medium">{{ member }} {{member.id}}</span>
+                        <span class="text-gray-800 font-medium">{{ member }}</span>
                     </label>
                 {% endfor %}
             </div>
