--- a/Project_Manager/templates/projects/includes/member.html
+++ b/Project_Manager/templates/projects/includes/member.html
@@ -4,7 +4,7 @@
     <tr id="pp-{{member.pk}}" class="border-b border-gray-200 hover:bg-gray-100 transition-colors {% cycle 'bg-white' 'bg-gray-50' %}">
         <td class="w-10 py-1 px-3 text-center whitespace-nowrap">{{ forloop.counter }}</td>
         <td class="py-1 px-6 text-left font-bold">{{ member.username }}</td>
-        <td class="py-1 px-6 text-left">{{ member.email|default:"---" }}</td>
+        <td class="py-1 px-6 text-left">{% if not member.profile.hide_email %}{{ member.email|default:"---" }}{%else%}Почта скрыта{%endif%}</td>
         <td class="py-1 px-6 text-left">{{ member.projects_count }}</td>
         <td class="py-1 px-6 text-left">
             {% if member != team.author and your_role >= ROLE_PRIORITY.ADMIN %}
