--- a/Project_Manager/templates/users/card-profile.html
+++ b/Project_Manager/templates/users/card-profile.html
@@ -133,7 +133,7 @@
   <div class="mt-4">
     <h3 class="text-sm font-semibold mb-2 text-gray-800">КРАТКОЕ ОПИСАНИЕ</h3>
     <p class="text-sm text-gray-600">
-      {{ profile.short_description }}
+      {{ profile.short_description|default:"Не указано" }}
     </p>
   </div>
 </div>
