--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -39,9 +39,9 @@
   <h2 class="text-2xl font-semibold mb-4">Контактная информация</h2>
   <div class="bg-white shadow rounded-lg p-6">
 
-    <div class="flex "><strong>Email:</strong> 
+    <div class="flex mb-2"><strong>Email: </strong> 
     {% if profile.hide_email %}
-      <div class="stars-container w-[20%] ml-2 mt-[-5px] mb-2">
+      <div class="stars-container w-[20%] ml-2 mt-[-5px]">
         <p class="text-sm hidden-email-text">Скрыто пользователем</p>
         <div class="stars"></div>
         <div class="stars-twinkle"></div>
@@ -51,7 +51,7 @@
     {% endif %}
     </div>
 
-    <div class="flex "><strong>Телефон:</strong> 
+    <div class="flex"><strong>Телефон: </strong> 
       {% if profile.hide_number %}
         <div class="stars-container w-[20%] ml-2 mt-[-5px] mb-1">
           <p class="text-sm hidden-email-text">Скрыто пользователем</p>
@@ -59,7 +59,7 @@
           <div class="stars-twinkle"></div>
         </div>
       {% else %}
-        <p class="mb-2"><strong>Телефон:</strong> {{ profile.phone_number|default:"---" }}</p>
+        <p class="mb-2">{{ profile.phone_number|default:"---" }}</p>
       {% endif %}
       </div>
     
