--- a/Project_Manager/templates/users/includes/create-tag-modal.html
+++ b/Project_Manager/templates/users/includes/create-tag-modal.html
@@ -4,7 +4,7 @@
     <div class="modal-box bg-gray-100 shadow-xl text-base-content rounded-lg">
         <button onclick="this.closest('dialog').close();" class="btn btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
         <h3 class="text-2xl text-gray-600 font-bold">Создание тега</h3>
-        <form action="{% url 'users:create_user_tag' %}" method="post">{% csrf_token %}
+        <form action="{% url 'users:create_user_tag' user.pk %}" method="post">{% csrf_token %}
             
         <!-- Название -->
         <div class="mb-4">
