--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -59,7 +59,7 @@
   <!-- Контейнер списка -->
   <div id="ps" class="space-y-3">
 
-    {% include 'projects/s.html' %}
+    {% include 'projects/projects.html' %}
     
   </div>
 </div>
