--- a/Project_Manager/templates/home-page.html
+++ b/Project_Manager/templates/home-page.html
@@ -16,12 +16,13 @@
 </head>
 <body>
 	
-	<header class="bg-white">
+	<header class="bg-white shadow-lg z-10">
 		<nav class="mx-auto flex items-center justify-between p-[18px] lg:px-8" aria-label="Global">
 		  <div class="flex lg:flex-1">
 			<a href="#" class="-m-1.5 p-1.5">
-			  <img class="h-8 w-auto" src="" alt="">
+				<img class="h-8 w-auto scale-125" src="{% static 'logo.png' %}" alt="">
 			</a>
+			<h1 class="ml-2 text-black text-[1.75rem] leading-[2rem] font-bold">NexusPM</h1>
 		  </div>
 		  <div class="flex lg:hidden">
 			<button type="button" id="menu-open" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
