--- a/Project_Manager/templates/users/profile.html
+++ b/Project_Manager/templates/users/profile.html
@@ -41,7 +41,7 @@
 
     <div class="flex mb-2"><strong>Email: </strong> 
     {% if profile.hide_email %}
-      <div class="stars-container w-[20%] ml-2 mt-[-5px]">
+      <div class="stars-container min-w-[20%] max-w-[40%] ml-2 mt-[-5px]">
         <p class="text-sm hidden-email-text">Скрыто пользователем</p>
         <div class="stars"></div>
         <div class="stars-twinkle"></div>
@@ -53,7 +53,7 @@
 
     <div class="flex"><strong>Телефон: </strong> 
       {% if profile.hide_number %}
-        <div class="stars-container w-[20%] ml-2 mt-[-5px] mb-1">
+        <div class="stars-container min-w-[20%] max-w-[40%] ml-2 mt-[-5px] mb-1">
           <p class="text-sm hidden-email-text">Скрыто пользователем</p>
           <div class="stars"></div>
           <div class="stars-twinkle"></div>
