--- a/Project_Manager/templates/includes/header-team-conf.html
+++ b/Project_Manager/templates/includes/header-team-conf.html
@@ -26,7 +26,13 @@
             <i class="fas fa-cog mr-2"></i>
             Конфигурация
         </a>
-        
+
+        <!-- Кнопка "Права доступа" -->
+        <a href="{% url 'teams:roles' team.id %}" class="btn btn-outline btn-sm flex items-center text-gray-800 hover:text-blue-600">
+            <i class="fas fa-balance-scale-right mr-2"></i>
+            Роли
+        </a>
+
         <!-- Выпадающее меню "Прочее" -->
         <div class="dropdown dropdown-end">
             <div tabindex="0" role="button" class="btn btn-outline btn-sm flex items-center text-gray-800 hover:text-blue-600">
