--- a/Project_Manager/templates/base.html
+++ b/Project_Manager/templates/base.html
@@ -38,7 +38,7 @@
 			<div class="hidden lg:flex lg:gap-x-6 bg-gray-200 rounded-xl">
 				<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">О возможностях</a>
 				<a href="{% url 'home' %}" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">На главную</a>
-				<a href="#" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
+				<a href="{% url 'feedback' %}" class="btn btn-neutral btn-outline text-xl font-semibold text-zinc-950 border-none">Обратная связь</a>
 			</div>
 			<div class="hidden lg:flex lg:flex-1 lg:justify-end">
 				{% if user.is_authenticated %}
@@ -71,7 +71,7 @@
 						<div class="space-y-2 py-6">
 							<a href="{% url 'home' %}" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">На главную</a>
 							<a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">О возможностях</a>
-							<a href="#" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Обратная связь</a>
+							<a href="{% url 'feedback' %}" class="-mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-gray-900 hover:bg-gray-50">Обратная связь</a>
 						</div>
 						<div class="py-6">
 							{% if user.is_authenticated %}
