--- a/Project_Manager/templates/teams/workplace.html
+++ b/Project_Manager/templates/teams/workplace.html
@@ -21,12 +21,12 @@
     <!-- Карточка 2 -->
     <div class="card w-[24rem] bg-gradient-to-r from-sky-500 to-indigo-500 shadow-xl">
       <div class="card-body p-[1.25rem]">
-        <h2 class="card-title text-2xl text-white">Возможности</h2>
-        <p class="text-white">Узнайте, что вы можете делать в нашей системе.</p>
+        <h2 class="card-title text-2xl text-white">Команды</h2>
+        <p class="text-white">Управляйте командами, отслеживайте прогресс, ставьте цели.</p>
         <div class="card-actions justify-end">
-          <button class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
-            <span class="text-left text-indigo-600 transition-colors group-hover:text-white">О возможностях</span>
-          </button>
+          <a href="{% url 'teams:team_list' %}" class="btn items-center justify-start overflow-hidden font-medium bg-indigo-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
+            <span class="text-left text-indigo-600 transition-colors group-hover:text-white">К командам</span>
+          </a>
         </div>
       </div>
     </div>
@@ -34,12 +34,12 @@
     <!-- Карточка 3 -->
     <div class="card w-[24rem] bg-gradient-to-r from-green-400 to-emerald-600 shadow-xl">
       <div class="card-body p-[1.25rem]">
-        <h2 class="card-title text-2xl text-white">Команды</h2>
-        <p class="text-white">Управляйте командами, отслеживайте прогресс, ставьте цели.</p>
-        <div class="card-actions justify-end">
-          <a href="{% url 'teams:team_list' %}" class="btn items-center justify-start overflow-hidden font-medium bg-green-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
-            <span class="text-left text-green-800 transition-colors group-hover:text-white">К командам</span>
-          </a>
+        <h2 class="card-title text-2xl text-white">История</h2>
+          <p class="text-white">Узнайте, что нового произошло в проектах.</p><br>
+          <div class="card-actions justify-end">
+          <button class="btn items-center justify-start overflow-hidden font-medium bg-green-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
+            <span class="text-left text-green-800 transition-colors group-hover:text-white">История</span>
+          </button>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
         <h2 class="card-title text-2xl text-white">Обратная связь</h2>
         <p class="text-white">Есть вопросы? Обращайтесь!</p>
         <div class="card-actions justify-end">
-          <a class="btn items-center justify-start overflow-hidden font-medium bg-yellow-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
+          <a href="{% url 'feedback' %}" class="btn items-center justify-start overflow-hidden font-medium bg-yellow-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
             <span class="text-left text-yellow-800 transition-colors group-hover:text-white">Обратная связь</span>
           </a>
         </div>
