--- a/Project_Manager/templates/teams/workplace.html
+++ b/Project_Manager/templates/teams/workplace.html
@@ -37,9 +37,9 @@
         <h2 class="card-title text-2xl text-white">История</h2>
           <p class="text-white">Узнайте, что нового произошло в проектах.</p><br>
           <div class="card-actions justify-end">
-          <button class="btn items-center justify-start overflow-hidden font-medium bg-green-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
+          <a href="{% url 'logs:history' %}" class="btn items-center justify-start overflow-hidden font-medium bg-green-100 rounded-lg hover:bg-transparent hover:border-white hover:border-2 group py-1.5 px-2.5">
             <span class="text-left text-green-800 transition-colors group-hover:text-white">История</span>
-          </button>
+          </a>
         </div>
       </div>
     </div>
