--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -249,7 +249,7 @@
         
             <!-- Фоновая зона, реагирующая на hover в свободной области -->
             <div class="absolute inset-0 z-10 rounded-md bg-gray-200 cursor-pointer opacity-0 group-hover:opacity-100"></div>
-        
+            {% include 'tasks/includes/add-tag-modal.html' %}
           </div>
         </div>
 
