a header has been added everywhere

--- a/Project_Manager/templates/feedback.html
+++ b/Project_Manager/templates/feedback.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Обратная связь
+{% endblock title %}
+
+
 {% block content %}
 <div class="min-h-screen bg-gray-100 py-12 px-4 sm:px-6 lg:px-8 font-sans">
   <div class="max-w-3xl mx-auto bg-white rounded-xl overflow-hidden p-8 shadow-[0_0_30px_rgba(0,0,0,0.05)]">
