--- a/Project_Manager/templates/projects/includes/statuses.html
+++ b/Project_Manager/templates/projects/includes/statuses.html
@@ -1,5 +1,10 @@
 {% extends 'projects/project-settings.html' %}
 
+{% block title %}
+Статусы
+{% endblock title %}
+
+
 {% block configuration_content %}
 
 <div class="flex items-center p-4 mb-1">
