--- a/Project_Manager/templates/tasks/task-detail.html
+++ b/Project_Manager/templates/tasks/task-detail.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load task_url %}
 
+{% block title %}
+Подробности задачи
+{% endblock title %}
 
 {% block content %}
 
