--- a/Project_Manager/templates/tasks/task_list.html
+++ b/Project_Manager/templates/tasks/task_list.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Список задач
+{% endblock title %}
+
+
 {% block content %}
 
 {% include 'tasks/includes/header-tasks.html' %}
