--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -1,5 +1,10 @@
 {% extends 'teams/team-conf.html' %}
 
+{% block title %}
+Участники команды
+{% endblock title %}
+
+
 {% block configuration_content %}
 
 <div>
