--- a/Project_Manager/templates/projects/my_projects.html
+++ b/Project_Manager/templates/projects/my_projects.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Проекты где я участник
+{% endblock title %}
+
 {% block content %}
 <div class="mx-auto px-2 py-4">
 
