--- a/Project_Manager/templates/projects/project_list.html
+++ b/Project_Manager/templates/projects/project_list.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Проекты
+{% endblock title %}
+
 {% block content %}
 
 <div id="content" class="p-6">
