--- a/Project_Manager/templates/tasks/my_tasks.html
+++ b/Project_Manager/templates/tasks/my_tasks.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+
+{% block title %}
+Мои задачи
+{% endblock title %}
+
+
 {% block content %}
 <div class="mx-auto px-2 py-4">
 
