--- a/Project_Manager/templates/teams/includes/setting.html
+++ b/Project_Manager/templates/teams/includes/setting.html
@@ -1,5 +1,10 @@
 {% extends 'teams/team-conf.html' %}
 
+{% block title %}
+Настройки команды
+{% endblock title %}
+
+
 {% block configuration_content %}
 <div class="p-6 max-w-2xl mx-auto">
 
