--- a/Project_Manager/templates/teams/team_list.html
+++ b/Project_Manager/templates/teams/team_list.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static custom_filters %}
 
+{% block title %}
+Команды
+{% endblock title %}
+
 {% block content %}
 
 <div class="flex items-center p-4 mb-1">
