--- a/Project_Manager/templates/users/base-profile.html
+++ b/Project_Manager/templates/users/base-profile.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Профиль
+{% endblock title %}
+
 {% block content %}
 <div class="flex flex-col text-gray-800 lg:flex-row w-full p-6 gap-6">
 
