--- a/Project_Manager/templates/teams/includes/team_members.html
+++ b/Project_Manager/templates/teams/includes/team_members.html
@@ -66,7 +66,9 @@
                 </tr>
             </thead>
             <tbody id="list_team_members" class="text-gray-600 text-sm font-light">
+                {% for member in team_members %}
                 {% include 'teams/includes/team_members_list.html' %}
+                {% endfor %}
             </tbody>
         </table>
     </div>
